# iiif_paleography

./: .gitignore  LICENSE  README.md  pyproject.toml
iiif_paleography/: __init__.py  iiif_paleography.py  transcribe.py
iiif_paleography/gemini/: __init__.py  gemini.py  metadata.py
iiif_paleography/iiif/: __init__.py  convert.py
prompts/: gemini-htr-and-coords.md  gemini-htr.md  gemini-map.md  gemini-metadata.md  gemini-word.md
